[gd_scene load_steps=11 format=3 uid="uid://i54nt5afhxnf"]

[ext_resource type="Script" uid="uid://cbwafg8ue732m" path="res://Assets/Bets/CrownGrab.gd" id="1_jlkdb"]
[ext_resource type="Texture2D" uid="uid://sag3ge8d2fqc" path="res://Assets/Bets/Pig.png" id="2_owl41"]
[ext_resource type="AudioStream" uid="uid://cahu6a34by1sh" path="res://Assets/Bets/fx_coin.wav" id="3_rmih4"]

[sub_resource type="SphereShape3D" id="SphereShape3D_3r4vu"]
radius = 0.232201

[sub_resource type="Curve" id="Curve_owl41"]
_data = [Vector2(0, 0.45129865), 0.0, 0.0, 0, 0, Vector2(0.2519685, 1), 0.0, 0.0, 0, 0, Vector2(0.78346455, 0.67554075), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 4

[sub_resource type="CurveTexture" id="CurveTexture_7c4h6"]
curve = SubResource("Curve_owl41")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_ra866"]
particle_flag_align_y = true
direction = Vector3(0, 1, 0)
spread = 40.0
flatness = 0.2
initial_velocity_min = 2.0
initial_velocity_max = 5.0
scale_min = 2.5
scale_max = 3.0
scale_curve = SubResource("CurveTexture_7c4h6")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_5bsxa"]
albedo_color = Color(0.952496, 0.7050946, 1.1551381e-06, 1)

[sub_resource type="CylinderMesh" id="CylinderMesh_v2eyl"]
material = SubResource("StandardMaterial3D_5bsxa")
top_radius = 0.05
bottom_radius = 0.05
height = 0.01

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_rmih4"]
streams_count = 1
stream_0/stream = ExtResource("3_rmih4")

[node name="PiggyBank" type="CharacterBody3D" groups=["PiggyBank"]]
collision_layer = 7
collision_mask = 7
script = ExtResource("1_jlkdb")
grabDistance = 0.6
affectedByGravity = true
maxElevation = 0.3

[node name="Sprite3D" type="Sprite3D" parent="."]
transform = Transform3D(2, 0, 0, 0, 2, 0, 0, 0, 2, 0, 0, 0)
billboard = 1
shaded = true
texture_filter = 0
render_priority = 1
texture = ExtResource("2_owl41")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("SphereShape3D_3r4vu")

[node name="CoinParticles" type="GPUParticles3D" parent="."]
transform = Transform3D(-4.371139e-08, 0, 1, 0, 1, 0, -1, 0, -4.371139e-08, 0, 0.13175845, 0)
emitting = false
amount = 1
lifetime = 0.52
one_shot = true
process_material = SubResource("ParticleProcessMaterial_ra866")
draw_pass_1 = SubResource("CylinderMesh_v2eyl")

[node name="CoinExplosionParticles" type="GPUParticles3D" parent="."]
transform = Transform3D(-4.371139e-08, 0, 1, 0, 1, 0, -1, 0, -4.371139e-08, 0, 0.13175845, 0)
emitting = false
amount = 260
lifetime = 1.4000000000000001
one_shot = true
explosiveness = 0.1
randomness = 0.5
process_material = SubResource("ParticleProcessMaterial_ra866")
draw_pass_1 = SubResource("CylinderMesh_v2eyl")

[node name="CoinCooldown" type="Timer" parent="."]

[node name="CoinSFX" type="AudioStreamPlayer3D" parent="."]
stream = SubResource("AudioStreamRandomizer_rmih4")
attenuation_model = 3
volume_db = -2.0
bus = &"SFX"

[connection signal="wasPushed" from="." to="." method="_on_was_pushed"]
[connection signal="finished" from="CoinExplosionParticles" to="." method="_on_coin_explosion_particles_finished"]
[connection signal="timeout" from="CoinCooldown" to="." method="onCoinCooldownTimeout"]
[connection signal="finished" from="CoinSFX" to="." method="_on_coin_sfx_finished"]
